# FunPayCardinal

./: .replit  generate_config.py  main.py  nixpacks.toml  pyproject.toml  railway.toml  replit.md  requirements.txt  start.sh
attached_assets/: Pasted--You-reached-the-start-of-the-range-May-7-2026-10-52-AM_1778140751696.txt  Pasted--You-reached-the-start-of-the-range-May-7-2026-9-13-AM-_1778134554741.txt  Pasted--message-07-05-2026-20-01-11-I-main-cfg-severity-error-_1778184198985.txt  Pasted--message-08-05-2026-14-02-14-W-L1naever-ID-1653908370-L_1778249125683.txt  Pasted--message-File-app-plugins-AutoStars-py-line-71-in-modul_1778136118542.txt  Pasted--message-Telegram-t-me-funpay-cardinal-severity-info-at_1778135918954.txt  Pasted--message-app-main-py-40-SyntaxWarning-invalid-escape-se_1778135017986.txt  Pasted--message-severity-info-attributes-level-info-timestamp-_1778135487419.txt  Pasted--remarkable-truth-production-Agent-FunPayCardinal-Deplo_1778132415051.txt  Pasted-339Z-message-08-05-2026-08-29-13-I-Linaever-no-severity_1778229626219.txt  Pasted-Source-Source-Repo-NL38jsxjxjdhsbbd838-FunPayCardinal-D_1778136298184.txt  Pasted-You-reached-the-start-of-the-range-May-7-2026-10-54-AM-_1778140832841.txt  Pasted-You-reached-the-start-of-the-range-May-7-2026-9-26-AM-m_1778135373492.txt  Pasted-stamp-2026-05-07T09-01-23-211234924Z-message-07-05-2026_1778144578166.txt  autostars_(1)_1778083568709.py
funpay-bot/: .gitignore  .replit  generate_stars_config.py  hash_password.py  nixpacks.toml  railway.toml  replit.md  requirements.txt  start.sh
plugins/: AutoStars.py  (+1 more)
(+11 files in other folders)
