[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.10.2",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "colorama>=0.4.6",
    "cryptography>=48.0.0",
    "fake-useragent>=2.2.0",
    "lxml>=6.1.0",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "pydantic==1.9.0",
    "pysteamauth>=1.1.2",
    "pytelegrambotapi==4.15.2",
    "requests>=2.33.1",
    "requests-toolbelt>=1.0.0",
    "rsa==4.7",
    "urllib3>=2.2.2",
    "yarl>=1.23.0",
]
